# ia-fil-toolbox

./: .gitignore  .gitlab-ci.yml  .python-version  README.md  collect_cmd.py  daemon_cmd.py  fil_crawler.py  files_cmd.py  ia_fetch.py  ia_fil.py  merge_roots_cmd.py  metadata_cmd.py  pyproject.toml  run-someguy.sh  shared.py  staging_ipfs.sh  test_pipeline.py
.github/workflows/: test.yml
test_fixtures/: item1_data.txt  item1_files.xml  item1_meta.xml  item2_files.xml  item2_meta.xml  item2_notes.md
