[project]
name = "fil-meta-crawler"
version = "0.1.0"
description = "Fetch and parse IA-style metadata/files XMLs from an IPFS trustless gateway into SQLite"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ia-fetch = "ia_fetch:main"

[tool.setuptools]
py-modules = ["ia_fetch"]

