[project]
name = "ia-fil-toolbox"
version = "0.1.0"
description = "Internet Archive & Filecoin toolbox for metadata crawling, item extraction, and root merging on IPFS DAGs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "requests>=2.32.5",
    "click>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ia-fil = "ia_fil:cli"

[tool.setuptools]
py-modules = ["ia_fil", "metadata_cmd", "files_cmd", "merge_roots_cmd", "shared", "daemon_cmd"]

